# satellite

./: .env.example  .gitignore  LICENSE.md  README.md  docker-compose.example.yml  flake.nix  process-compose.yaml
.github/workflows/: publish.yml
app/: .gitignore  analysis_options.yaml  pubspec.yaml
app/android/: .gitignore  build.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/satellite/app/: MainActivity.kt
app/android/app/src/main/kotlin/so/bruno/satellite/: MainActivity.kt
app/android/app/src/main/res/drawable/: ic_satellite.xml  ic_stat_satellite.xml
app/lib/: audio_handler.dart  main.dart
app/lib/stores/: audio_store.dart  satellite_store.dart
server/: .env  .env.example  .gitignore  Dockerfile  app.py  pyproject.toml  server.py
server/static/: manifest.json  sw.js
server/templates/: index.html
