[project]
name = "satellite-server"
version = "0.1.0"
description = "Satellite control server"
requires-python = ">=3.10"
dependencies = [
  "flask>=2.0.0",
  "flask-sock>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

